# MetadataMultitool

./: .gitignore  .mm_config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  DEVELOPMENT_ROADMAP.md  GUI_DEVELOPMENT_ROADMAP.md  GUI_PYQT6_IMPLEMENTATION_PROMPT.md  GUI_README.md  NEXT_PHASES_PROMPT.md  PRODUCTION_READINESS_PLAN.md  README.md  TESTING_COVERAGE_PROGRESS_REPORT.md  demo_gui.py  mypy.ini  pyproject.toml  test_black_sections_fix.py  test_light_mode_fixes.py
.claude/: settings.local.json
.github/workflows/: build_executables.yml  ci.yml
.mm_backups/: backup_index.json
docs/: CI.md  ETHICS.md  GUI.md  GUI_README.md  POISONING.md  README.md  development
docs/development/: DEVELOPMENT_SUMMARY.md
docs/installation/: linux.md  macos.md  windows.md
docs/screenshots/: README.md
docs/user_guide/: common_workflows.md  getting_started.md  index.md  troubleshooting.md
samples/: README.txt
scripts/: test_complete_gui.py  test_final_gui.py  test_final_improved.py  test_gui.py  test_gui_detailed.py
src/metadata_multitool/: __version__.py  audit.py  backup.py  batch.py  clean.py  cli.py  config.py  core.py  exif.py  filters.py  html.py  interactive.py  logging.py  metadata_profiles.py  poison.py  revert.py
src/metadata_multitool/gui/: __init__.py  main_window.py
src/metadata_multitool/gui/controllers/: __init__.py
src/metadata_multitool/gui/models/: __init__.py  config_model.py  file_model.py  operation_model.py
src/metadata_multitool/gui/utils/: __init__.py  gui_utils.py  (+2 more)
src/metadata_multitool/gui_qt/: __init__.py  main.py  main_window.py
tests/: conftest.py  test_backup.py  test_batch.py  test_clean.py  test_cli.py  test_cli_end_to_end.py  test_core.py  test_exif.py  test_filters.py  test_gui.py  test_gui_qt.py  test_html.py  test_interactive.py  test_poison.py  test_revert.py
tests/integration/: conftest.py  test_clean_poison_revert.py  test_workflows.py
tests/performance/: __init__.py  memory_profiling.py  test_benchmarks.py
(+28 files in other folders)
